# Project-Xplosion-Ba4

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
App/: functions_annex.md  streamlit_app.py  streamlit_app1.py
coordchem/: __init__.py  geometry.py  name.py  parser.py  test_parser.py
coordchem/database/: ir_bands.py
data/: __init__.py  ir_ra_bands.py
data/database/: __init__.py  ir_ra_bands.py
docs/: conf.py  index.rst
notebooks/: report.ipynb
parser/: test_parser.py
src/cheminfo/: __init__.py  skeleton.py
src/coordchem/: __init__.py  complex.py  geometry.py  hsab.py  molecule3D.py  name.py  name2.py  parser.py
src/coordchem/database/: __init__.py
src/coordchem/spectra/: __init__.py  predictor.py  renderer.py
src/coordchem/viz/: __init__.py  diagram_2d.py  layout_2d.py  ligand_data.py  molecule3D.py  structure_3d.py  transform_2d.py
src/spectra/: __init__.py  predictor.py
tests/: conftest.py  test_complex.py  test_corrections.py  test_diagram_2d.py  test_geometry.py  test_ir_bands.py  test_ir_ra_bands.py  test_mol3D.ipynb  test_name.py  test_name2.py  test_parser.py  test_predictor.py  test_skeleton.py  test_structure_3d.py
